--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1992,7 +1992,7 @@ background-color: #040564;
 
 .hh {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  /* background-color: rgb(255 255 255 / var(--tw-bg-opacity)); */
 }
 
 .ih {
@@ -3284,7 +3284,7 @@ background-color: #040564;
   }
 
   .ir {
-    padding-top: 13rem;
+    padding-top: 5rem;
   }
 
   .jr {
@@ -3512,4 +3512,9 @@ background-color: #040564;
   transition: opacity .2s ease;
   /* border-radius: 50px; */
   border: 4px solid #4e048a !important;
+}
+
+.cloud-title{
+  color: var(--ifm-color-title-darker);
+  	text-transform: capitalize;
 }
